# ML_ops3

./: Dockerfile  LogisticRegression_1.0_model.pkl  README.md  docker-compose.clearml.yml  docker-compose.yml  endpoints.py  main.py  model_info.json  model_manager.py  pyproject.toml  requirements.txt  schemas.py  streamlit_app.py  test_streamlit_app.py
app/: test_streamlit_app.py
data/: predict_data.json  test_data.json
utils/: dvc_manager.py  s3_client.py  s3_env.env  s3_utils.py
