[tool.poetry]
name = "mlops-hw2 4"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
altair = "5.4.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
blinker = "1.9.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
fastapi = "0.115.4"
gitdb = "4.0.11"
gitpython = "3.1.43"
grpcio = "1.67.1"
grpcio-tools = "1.67.1"
h11 = "0.14.0"
idna = "3.10"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
narwhals = "1.13.3"
numpy = "2.1.3"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.0.0"
protobuf = "5.28.3"
pyarrow = "18.0.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pydeck = "0.9.1"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-multipart = "0.0.17"
pytz = "2024.2"
referencing = "0.35.1"
requests = "2.32.3"
rich = "13.9.4"
rpds-py = "0.21.0"
scikit-learn = "1.5.2"
scipy = "1.14.1"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
starlette = "0.41.2"
streamlit = "1.40.0"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
toml = "0.10.2"
tornado = "6.4.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
unicorn = "2.1.1"
urllib3 = "1.25.11"
uvicorn = "0.32.0"
python-dotenv = "1.0.1"
boto3 = "1.35.76"
clearml = "1.17.0"
dvc = {extras = ["s3"], version = "^3.58.0"}
minio = "^7.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
